# dioxus-docs-kit

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  Dockerfile  LICENSE  README.md  build.rs  justfile  package.json  tailwind.css
.cargo/: config.toml
.claude/skills/: dioxus-docs-kit-integration
.github/: FUNDING.yml
.github/workflows/: homepage.yml
assets/: main.css  seggwat_logo.avif
blog/: _blog.json  building-with-dioxus.mdx  hello-world.mdx  rust-web-future.mdx
crates/dioxus-docs-kit/: Cargo.toml  README.md  THEMING.md  safelist.html  theme.css
crates/dioxus-docs-kit-build/: Cargo.toml  README.md
crates/dioxus-docs-kit-build/src/: lib.rs
crates/dioxus-docs-kit/examples/themes/: README.md  brutalist-light.css  default.css  shadcn-dark.css  shadcn-light.css  warm-editorial.css
crates/dioxus-docs-kit/src/: config.rs  hooks.rs  lib.rs  registry.rs
crates/dioxus-docs-kit/src/blog/: config.rs  hooks.rs  mod.rs  registry.rs  types.rs
crates/dioxus-docs-kit/src/components/: docs_layout.rs  docs_meta.rs  docs_page.rs  mobile_drawer.rs  mod.rs  page_nav.rs  search_modal.rs  sidebar.rs  theme_toggle.rs
crates/dioxus-docs-kit/src/components/blog/: author_info.rs  blog_card.rs  blog_layout.rs  blog_list.rs  blog_meta.rs  blog_post.rs  mobile_drawer.rs  mod.rs  post_nav.rs  progress_bar.rs  reading_time.rs  related_posts.rs  search_modal.rs  tag_filter.rs  theme_toggle.rs
crates/dioxus-mdx/: Cargo.toml  README.md  safelist.html
crates/dioxus-mdx/src/: lib.rs
crates/dioxus-mdx/src/components/: accordion.rs  api_examples.rs  callout.rs  card.rs  code.rs  icons.rs  mermaid.rs  mod.rs  param_field.rs  renderer.rs  response_field.rs  steps.rs  tabs.rs  toc.rs  update.rs
crates/dioxus-mdx/src/components/openapi/: endpoint_card.rs  endpoint_page.rs  method_badge.rs  mod.rs  parameters_list.rs  request_body.rs  responses_list.rs  schema_viewer.rs  spec_viewer.rs  tag_group.rs
crates/dioxus-mdx/src/parser/: accordion.rs  callout.rs  card.rs  code_group.rs  content.rs  fields.rs  frontmatter.rs  heading.rs  mod.rs  openapi_parser.rs  openapi_tag.rs  openapi_types.rs  steps.rs  syntax.rs  syntax_highlight.css  tabs.rs  types.rs  update.rs  utils.rs
docs/: _nav.json  changelog.mdx
docs/api-reference/: openapi-demo.mdx  overview.mdx  petstore.yaml
docs/getting-started/: introduction.mdx  quickstart.mdx
docs/guides/: basic-usage.mdx  blog.mdx  customization.mdx  integration.mdx
skills/dioxus-docs-kit-integration/: SKILL.md
skills/dioxus-docs-kit-theme/: SKILL.md
src/: main.rs
