[workspace]
members = [
    "crates/dioxus-docs-kit",
    "crates/dioxus-docs-kit-build",
    "crates/dioxus-mdx",
]

[package]
name = "dioxus-docs-kit-example"
version = "0.2.0"
authors = ["Hauke Jung <hauke.jung@outlook.de>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.3", features = ["router", "fullstack"] }
dioxus-free-icons = { version = "0.10.0", features = ["lucide"] }
dioxus-docs-kit = { path = "crates/dioxus-docs-kit", default-features = false }

[build-dependencies]
dioxus-docs-kit-build = { path = "crates/dioxus-docs-kit-build" }

[features]
default = ["web"]
web = ["dioxus/web", "dioxus-docs-kit/web"]
server = ["dioxus/server"]
