[package]
name = "dioxus-docs-kit-build"
version = "0.1.0"
authors = ["Hauke Jung <hauke.jung@outlook.de>"]
edition = "2024"
description = "Build-time helper for dioxus-docs-kit: generates content maps from _nav.json"
license = "MIT"
repository = "https://github.com/hauju/dioxus-docs-kit"
keywords = ["dioxus", "documentation", "build-script"]
categories = ["development-tools::build-utils"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
