[package]
name = "dioxus-docs-kit-build"
version = "0.2.0"
authors = ["Hauke Jung <hauke.jung@outlook.de>"]
edition = "2024"
description = "Build-time helper for dioxus-docs-kit: generates content maps from _nav.json"
license = "MIT"
repository = "https://github.com/hauju/dioxus-docs-kit"
homepage = "https://github.com/hauju/dioxus-docs-kit"
documentation = "https://docs.rs/dioxus-docs-kit-build"
keywords = ["dioxus", "documentation", "build-script"]
categories = ["development-tools::build-utils"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
