[package]
name = "dioxus-docs-kit"
version = "0.1.0"
authors = ["Hauke Jung <hauke.jung@outlook.de>"]
edition = "2024"
description = "Reusable documentation site shell for Dioxus applications"
license = "MIT"
repository = "https://github.com/hauju/dioxus-docs-kit"
homepage = "https://github.com/hauju/dioxus-docs-kit"
documentation = "https://docs.rs/dioxus-docs-kit"
keywords = ["dioxus", "documentation", "mdx", "docs-site", "openapi"]
categories = ["web-programming", "gui"]
readme = "README.md"

[dependencies]
dioxus = { version = "0.7", features = ["lib", "router"] }
dioxus-free-icons = { version = "0.10.0", features = ["lucide"] }
dioxus-mdx = { version = "0.1.0", path = "../dioxus-mdx", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }

[features]
default = ["web"]
web = ["dioxus/web", "dioxus-mdx/web"]
