[package]
name = "dioxus-mdx"
version = "0.5.0"
authors = ["Hauke Jung <hauke.jung@outlook.de>"]
edition = "2024"
description = "MDX parsing and rendering components for Dioxus"
license = "MIT"
repository = "https://github.com/hauju/dioxus-docs-kit"
homepage = "https://github.com/hauju/dioxus-docs-kit"
documentation = "https://docs.rs/dioxus-mdx"
keywords = ["dioxus", "mdx", "markdown", "documentation", "parser"]
categories = ["parsing", "web-programming", "text-processing"]
readme = "README.md"

[dependencies]
dioxus = { version = "0.7.9", features = ["lib"] }
dioxus-free-icons = { version = "0.10.0", features = ["lucide"] }
dioxus-code = { version = "0.1.2", default-features = false, features = [
    "runtime",
    "lang-bash",
    "lang-c-sharp",
    "lang-cpp",
    "lang-css",
    "lang-dockerfile",
    "lang-html",
    "lang-javascript",
    "lang-json",
    "lang-markdown",
    "lang-python",
    "lang-tsx",
    "lang-toml",
    "lang-typescript",
    "lang-yaml",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.11"
markdown = "1.0"
openapiv3 = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3.0", features = ["futures"] }

[features]
default = ["web", "mermaid"]
web = ["dioxus/web"]
mermaid = []

[dev-dependencies]
